--- a/src/app/user-update-password/user-update-password.component.html
+++ b/src/app/user-update-password/user-update-password.component.html
@@ -1,15 +1,8 @@
-<p>user-update-password works!</p>
+<mat-card id="changePasswordCard">
+  <mat-card-header id="cardHeader">
+    <mat-card-title id="passwordHeader">Update Password</mat-card-title>
+  </mat-card-header>
 
-
-<!-- <mat-form-field>
-  <input matInput [(ngModel)]="userData.Password" placeholder={{data.Password}} type="text" name="Password" required>
-</mat-form-field> -->
-<div>
-  <!-- <mat-form-field>
-    <input matInput [(ngModel)]="userData.Password" placeholder="Enter new password" [type]="hide ? 'password' : 'text'"
-           formControlName="password" required>
-    <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-  </mat-form-field> -->
 
   <mat-form-field appearance="fill" id="formField">
     <mat-label>Enter new password</mat-label>
@@ -22,9 +15,10 @@
 
   </mat-form-field>
 
-  <mat-card-actions>
-    <button mat-raised-button (click)="updateUser(token, userId)" color="primary">
-      Change Password
+  <mat-card-actions id="divSaveBtn">
+    <button mat-raised-button id="saveBtn" (click)="updateUser(token, userId)">
+      <mat-icon aria-hidden="false" aria-label="save icon">save_alt</mat-icon>
+      Save Changes
     </button>
   </mat-card-actions>
-</div>
+</mat-card>
