--- a/src/app/user-profile-delete/user-profile-delete.component.html
+++ b/src/app/user-profile-delete/user-profile-delete.component.html
@@ -1,13 +1,15 @@
-<p>user-profile-delete works!</p>
+<mat-card class="deletecard">
+  <mat-card-header id="cardHeader">
+    <mat-card-title id="deleteHeader">Are you sure that you want to delete your account?</mat-card-title>
+  </mat-card-header>
 
-<div class="delete-container">
-  <mat-card class="deletecard">
-    <h3 class="deletetitle" mat-dialog-title>Are you sure that you want to delete your account?</h3>
-    <div class="actionbtns">
-      <mat-dialog-actions class="actionbtns">
-        <button mat-raised-button class="cancelbtn" (click)="cancel()">Cancel</button>
-        <button mat-stroked-button class="deletebtn" (click)="deleteUserAccount(token,userId)">Delete Account</button>
-      </mat-dialog-actions>
-    </div>
-  </mat-card>
-</div>
+
+  <mat-dialog-actions id="actionbtns">
+    <button mat-button id="cancelbtn" (click)="cancel()">Cancel</button>
+    <button mat-raised-button id="deletebtn" (click)="deleteUserAccount(token,userId)">
+      <mat-icon aria-hidden="false" aria-label="delete icon">delete_forever</mat-icon>
+      Delete Account
+    </button>
+  </mat-dialog-actions>
+
+</mat-card>
