--- a/src/app/user-update-currency/user-update-currency.component.html
+++ b/src/app/user-update-currency/user-update-currency.component.html
@@ -1,19 +1,24 @@
-<p>user-update-currency works!</p>
+<mat-card id="changeCurrencyCard">
+  <mat-card-header id="cardHeader">
+    <mat-card-title id="currencyHeader">Update Currency Preference</mat-card-title>
+  </mat-card-header>
 
 
-<mat-form-field appearance="fill">
-  <mat-label>Currency Preference</mat-label>
-  <mat-select matNativeControl [(ngModel)]="userData.CurrencyPref" type="text" placeholder={{data.CurrencyPref}}
-              name="CurrencyPref">
+  <mat-form-field appearance="fill" id="formField">
+    <mat-label>Currency Preference</mat-label>
+    <mat-select matNativeControl [(ngModel)]="userData.CurrencyPref" type="text" placeholder={{data.CurrencyPref}}
+                name="CurrencyPref">
 
-    <mat-option value="CAD">CAD</mat-option>
-    <mat-option value="USD">USD</mat-option>
-    <mat-option value="GBP">GBP</mat-option>
-    <mat-option value="EUR">EUR</mat-option>
-  </mat-select>
-</mat-form-field>
-<mat-card-actions>
-  <button mat-raised-button (click)="updateUser(token, userId)" color="primary">
-    Edit Currency Preference
-  </button>
-</mat-card-actions>
+      <mat-option value="CAD">CAD</mat-option>
+      <mat-option value="USD">USD</mat-option>
+      <mat-option value="GBP">GBP</mat-option>
+      <mat-option value="EUR">EUR</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-card-actions id="divSaveBtn">
+    <button mat-raised-button id="saveBtn" (click)="updateUser(token, userId)">
+      <mat-icon aria-hidden="false" aria-label="save icon">save_alt</mat-icon>
+      Save Changes
+    </button>
+  </mat-card-actions>
+</mat-card>
