--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
@@ -8,31 +7,13 @@
 @import "primeicons/primeicons.css";
 @import "primeng/resources/primeng.min.css";
 @import "primeng/resources/themes/luna-blue/theme.css";
-// Plus imports for other components in your app.
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-////old here
-// $billFold-client-primary: mat.define-palette(mat.$indigo-palette);
-// $billFold-client-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-// $billFold-client-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-///old here
-// $billFold-client-theme: mat.define-light-theme((
-//   color: (
-//     primary: $billFold-client-primary,
-//     accent: $billFold-client-accent,
-//     warn: $billFold-client-warn,
-//   )
-// ));
 
 $light-app-theme: mat-light-theme((
         color: (
@@ -59,24 +40,16 @@ $dark-app-theme:   mat-dark-theme((
   }
 }
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-
-//old here
-// @include mat.all-component-themes($billFold-client-theme);
 .dark-theme {
   @include angular-material-color($dark-app-theme);
    @include body-theme($dark-app-theme);
 }
 
-/* You can add global styles to this file, and also import other style files */
-
 html, body { height: 100%; }
 body {  margin: 0; font-family: 'Raleway', sans-serif; }
 
 
-//calendar styles
+//font + colors global styles
 $my-primary-palette: mat.define-palette(mat.$cyan-palette);
 $my-bg-palette: mat.define-palette(mat.$blue-gray-palette);
 $my-warn-palette: mat.define-palette(mat.$amber-palette);
@@ -95,183 +68,7 @@ $bgGrey: #ebecef;
 body.mat-typography{
         font-family: $font;
 }
-//header bg
-.fc{
-        background-color: darken($primary, 10);
-        font-family: $font; 
-        border-radius: 5px;  
-}
 
-//arrows + inactive month/week
-.fc.fc-theme-standard .fc-toolbar .fc-button-group .fc-button{
-        background-color:$primary;
-        color:$white;
-        border:none;
-}
-.fc.fc-theme-standard .fc-toolbar .fc-button-group .fc-button:hover{
-        background-color:darken($primary,10);
-        color:$white;
-}
-.fc.fc-theme-standard .fc-toolbar .fc-button-group .fc-button:focus{
-        background-color:darken($primary,10);
-        box-shadow: 0 0 0 0.1rem $white;
-}
-.fc.fc-theme-standard .fc-toolbar .fc-button-group .fc-button:not(:disabled):focus{
-        // box-shadow: 0 0 0 0.1rem $white;
-        border-radius:3px;
-}
+@import './calStyles.scss';
+@import './chartStyles.scss';
 
-//focus box shadow (week and day)
-.fc.fc-theme-standard .fc-toolbar .fc-button.fc-dayGridMonth-button:not(:disabled):focus, .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridWeek-button:not(:disabled):focus, .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridDay-button:not(:disabled):focus{
-        // box-shadow: 0 0 0 0.2rem lighten($primary,10);
-        color:$white;
-        box-shadow: 0 0 0 0.1rem $white;
-        border-radius: 3px;
-}
-//active btn on hover
-.fc.fc-theme-standard .fc-toolbar .fc-button.fc-dayGridMonth-button.fc-button-active:hover, .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridWeek-button.fc-button-active:hover, .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridDay-button.fc-button-active:hover{
-        background-color:darken($primary,10);
-        color:$white;
-        // box-shadow: 0 0 0 0.2rem lighten($primary,10);
-        // box-shadow:none;
-}
-//week and day btn (inactive on hover)
-.fc.fc-theme-standard .fc-toolbar .fc-button.fc-dayGridMonth-button:hover, .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridWeek-button:hover, .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridDay-button:hover{
-        background-color: darken($primary,10);
-        color:$white;
-        // box-shadow: 0 0 0 0.2rem lighten($primary,10);
-        box-shadow: none;
-}
-//active btn on hover
-.fc.fc-theme-standard .fc-toolbar .fc-button.fc-dayGridMonth-button.fc-button-active, .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridWeek-button.fc-button-active, .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridDay-button.fc-button-active{
-        background-color:darken($primary,10);
-        border-color: darken($primary,10);
-        color:$white;
-}
-//month/week active
-.fc.fc-theme-standard .fc-toolbar .fc-button.fc-dayGridMonth-button.fc-button-active, .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridWeek-button.fc-button-active, .fc.fc-theme-standard .fc-toolbar .fc-button.fc-timeGridDay-button.fc-button-active{
-        background-color: darken($primary,10);
-        border-color: darken($primary,10);
-        color:$white;
-}
-//today btn when not on month
- .fc.fc-theme-standard .fc-toolbar .fc-today-button:not(:disabled):hover{
-         background-color: $primary;
-        // box-shadow: 0 0 0 0.2rem lighten($primary,30);
-        border-radius: 3px;
-        color:$white;
- }
-// .fc.fc-theme-standard .fc-toolbar .fc-today-button-active{
-//         box-shadow: 0 0 0 0.2rem lighten($primary,30);    
-// }
-  .fc.fc-theme-standard .fc-toolbar .fc-today-button:disabled{
-         background-color: darken($primary,10);
-         border:none;
-         color:$white;
- }
-
- //today btn only
-  .fc.fc-theme-standard .fc-toolbar .fc-today-button{
-          background-color:darken($primary,10);
-          border:none;
-          transition:none;
-          color:$white;
-        //   box-shadow: none;
-  }
-.fc.fc-theme-standard .fc-toolbar .fc-today-button:not(:disabled):focus{
-       box-shadow: 0 0 0 0.2rem lighten($primary,10);
-       border:none;
-//        color:$white;
-        // transform:box-shadow(none);
-        // transform:border(none);
-}
-//month title
-.fc .fc-toolbar-title{
-        color:$white;
-        font-family: $font;
-        font-weight: 500;
-}
-//grid bg
-.fc .fc-scroller{
-        background-color:$bg;   
-}
-//weekdays bg
-.fc.fc-theme-standard .fc-view-harness th{   
-        background-color: darken($primary, 20);
-}
-//text
-.fc.fc-theme-standard a{
-        color:#fff;
-}
-//list view header
-.fc.fc-theme-standard .fc-view-harness .fc-cell-shaded{
-        background-color: darken($primary,20);
-}
-//today color
-.fc-daygrid-day.fc-day.fc-day-mon.fc-day-today, .fc-daygrid-day.fc-day.fc-day-fri.fc-day-today, .fc-daygrid-day.fc-day.fc-day-tue.fc-day-today, .fc-daygrid-day.fc-day.fc-day-wed.fc-day-today, .fc-daygrid-day.fc-day.fc-day-thu.fc-day-today, .fc-daygrid-day.fc-day.fc-day-sat.fc-day-today, .fc-daygrid-day.fc-day.fc-day-sun.fc-day-today {
-        background-color:darken($primary,20);
-}
-//text list views
-.fc.fc-theme-standard .fc-view-harness td{
-        color:$white;
-}
-//hover days
-.fc.fc-theme-standard .fc-view-harness td:hover{
-        background-color:lighten($bg, 10);
-}
-
-//remove all-day fgrom list view
-.fc .fc-list-event-graphic, .fc .fc-list-event-time{
-        display:none
-}
-
-//now container for week
-.fc .fc-timegrid-now-indicator-container{
-        background-color:lighten($bg,15);
-}
-
-//event colors
-.fc.fc-theme-standard .fc-view-harness .fc-event.fc-daygrid-block-event.PaidNo{
-        background-color: $warn;
-        font-weight: bolder;
-        border-color: darken($warn,10);
-        text-transform: uppercase;
-        text-align: center;
-}
-.fc.fc-theme-standard .fc-view-harness .fc-event.fc-daygrid-block-event.PaidYes{
-        background-color: darken($primary,5);
-        font-weight: bolder;
-        border-color: darken($primary,20);
-        text-transform: uppercase;
-        text-align: center;
-}
-
-
-
-//event container
-.fc.fc-theme-standard .fc-view-harness td, .fc.fc-theme-standard .fc-view-harness .fc-scrollgrid, .fc.fc-theme-standard .fc-view-harness th{
-        //     border-color:lighten($bg,10);
-}
-
-//outside cal bottom border
-.fc.fc-theme-standard .fc-view-harness .fc-view{
-        background-color: $bg;
-}
-
-
-
-
-
-
-
-.p-component{
-        font-family: $font;
-        // font-size: large;
-}
-
-.p-panel .p-panel-header{
-        background-color: darken($primary,10);
-        font-family: $font;
-        font-size: $headerSize;
-        color:$white;
-}
