update profile page

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -7,6 +7,7 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
+      <mat-divider></mat-divider>
 
       <div id="line">
         <p>Name: <span>{{userData.FirstName}}</span> <span> {{userData.LastName}}</span>
