--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -23,7 +23,8 @@ $bgGrey: #ebecef;
 #cardHeader{
   font-family: $font;
   font-size: $headerSize;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  margin-left: -5px;
   font-weight: bolder;
 }
 p{
