--- a/src/app/bill-delete/bill-delete.component.html
+++ b/src/app/bill-delete/bill-delete.component.html
@@ -1,15 +1,11 @@
-<p>bill-delete works!</p>
+<mat-card class="deletecard">
+  <mat-card-header id="cardHeader">
+    <mat-card-title id="deleteHeader">Are you sure that you want to delete this bill?</mat-card-title>
+  </mat-card-header>
 
-<p>Date: {{billInfo.Date}}</p>
+  <mat-dialog-actions id="actionbtns">
+    <button mat-button id="cancelbtn" (click)="cancel()">Cancel</button>
+    <button mat-raised-button id="deletebtn" (click)="deleteBill(billId, token)">Delete Bill</button>
+  </mat-dialog-actions>
 
-<div class="delete-container">
-  <mat-card class="deletecard">
-    <h3 class="deletetitle" mat-dialog-title>Are you sure that you want to delete this bill?</h3>
-    <div class="actionbtns">
-      <mat-dialog-actions class="actionbtns">
-        <button mat-raised-button class="cancelbtn" (click)="cancel()">Cancel</button>
-        <button mat-stroked-button class="deletebtn" (click)="deleteBill(billId, token)">Delete Bill</button>
-      </mat-dialog-actions>
-    </div>
-  </mat-card>
-</div>
+</mat-card>
