--- a/src/app/bill-edit/bill-edit.component.html
+++ b/src/app/bill-edit/bill-edit.component.html
@@ -1,35 +1,29 @@
-<p>bill-edit works!</p>
-
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Edit Expense</mat-card-title>
+<mat-card id="billEditCard">
+  <mat-card-header id="billEditHeader">
+    <mat-card-title id="billEditTitle">Edit Bill</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <form>
 
-      <mat-form-field>
+      <mat-form-field appearance="fill" id="formField">
+        <mat-label>Description</mat-label>
         <input matInput [(ngModel)]="billInfo.Description" placeholder="Description" type="text" name="Description"
                required>
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field appearance="fill" id="formField">
+        <mat-label>Date</mat-label>
         <input matInput [(ngModel)]="billInfo.Date" placeholder="Date" type="Date" name="Date" required>
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field appearance="fill" id="formField">
+        <mat-label>Amount</mat-label>
+        <mat-icon id="currency" aria-hidden="true" aria-label="CAD icon" matPrefix>attach_money</mat-icon>
         <input matInput [(ngModel)]="billInfo.Amount" type="number" placeholder={{data.Amount}} name="Amount" required>
-      </mat-form-field>
-      <mat-form-field appearance="fill">
-        <mat-label>Currency Preference</mat-label>
-        <mat-select matNativeControl [(ngModel)]="billInfo.Currency" type="text" placeholder="CAD" name="Currency">
-          <mat-option value="CAD">CAD</mat-option>
-          <mat-option value="USD">USD</mat-option>
-          <mat-option value="GBP">GBP</mat-option>
-          <mat-option value="EUR">EUR</mat-option>
-        </mat-select>
-      </mat-form-field>
+      </mat-form-field>({{billInfo.Currency}})
     </form>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button (click)="editBill(userId, token, billId)" color="primary">
+  <mat-card-actions id="divBtns">
+    <button mat-raised-button id="editBtn" (click)="editBill(userId, token, billId)" color="primary">
+      <mat-icon aria-hidden="false" aria-label="save icon">save_alt</mat-icon>
       Save Changes
     </button>
   </mat-card-actions>
