change cancel btn style

--- a/src/app/user-profile-delete/user-profile-delete.component.scss
+++ b/src/app/user-profile-delete/user-profile-delete.component.scss
@@ -33,8 +33,7 @@ $bgGrey: #ebecef;
 #cancelbtn{
   font-family: $font;
   font-size: $textSize;
-  background-color: #424242;
-  color:$primary;
+  background-color: darken($primary,10);
 }
 #deletebtn{
   font-family: $font;
