--- a/src/app/user-update-username/user-update-username.component.scss
+++ b/src/app/user-update-username/user-update-username.component.scss
@@ -26,6 +26,7 @@ $bgGrey: #ebecef;
 #formField{
   font-family: $font;
   justify-content: center;
+  font-size: $textSize;
 }
 #saveBtn{
   font-family: $font;
