--- a/src/app/bill-create/bill-create.component.scss
+++ b/src/app/bill-create/bill-create.component.scss
@@ -29,20 +29,21 @@ $bgGrey: #ebecef;
   margin-inline: 10px;
 }
 #checkbox{
-  margin-left: 20px;
   font-family: $font;
   font-size: $textSize;
-  margin-left: 115px;
+  margin-left: 95px;
 }
 #divBtns{
   display: flex;
   justify-content: end;
   margin-right:10px;
+  margin-top:-10px;
 }
 #addBtn{
   background-color:darken($primary,5);
   font-family: $font;
   font-size:$textSize;
+  margin-bottom: 10px;
 }
 #addBtn:hover{
   text-decoration: underline;
