add nav bar to page

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,8 +1,9 @@
+<app-nav-bar></app-nav-bar>
 <div id="container">
 
   <mat-card id="profileCard">
     <mat-card-header id="cardHeader">
-      <mat-card-title>
+      <mat-card-title id="cardHeader">
         Profile: {{userData.Username}}
       </mat-card-title>
     </mat-card-header>
