modify profile styles

--- a/src/app/user-profile/user-profile.component.scss
+++ b/src/app/user-profile/user-profile.component.scss
@@ -6,7 +6,7 @@ $my-warn-palette: mat.define-palette(mat.$amber-palette);
 
 $font:'Raleway', sans-serif;
 $textSize: 15px;
-$headerSize: 20px;
+$headerSize: 25px;
 $headerbg: mat.get-color-from-palette($my-primary-palette, 700);
 $primary: mat.get-color-from-palette($my-primary-palette,500);
 $warn: mat.get-color-from-palette($my-warn-palette,500);
@@ -15,17 +15,22 @@ $white: #fff;
 $bgGrey: #ebecef;
 
 #container{
-  margin:50px;
+ display: flex;
+  justify-content: center;
+  margin: 0;
 }
 #profileCard{
   border-radius: 10px;
+   width:800px;
+   margin-top: 20px;
 }
 #cardHeader{
   font-family: $font;
   font-size: $headerSize;
-  margin-bottom: 40px;
+  margin-top:5px;
+  margin-bottom: 20px; 
   margin-left: -5px;
-  font-weight: bolder;
+  font-weight: 500;
 }
 p{
   margin-top:15px;
@@ -61,4 +66,29 @@ margin-left: 10px;
 #deleteBtn:hover{
   // background-color: darken($warn,20);
    text-decoration: underline;
+}
+
+@media only screen and (min-device-width: 250px) and (max-device-width: 320px) {  
+    /* Change a menu to fit the screen better, etc... */
+    #profileCard{
+      max-width: 250px;
+    }
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {  
+    /* Change a menu to fit the screen better, etc... */
+    #profileCard{
+      max-width: 320px;
+    }
+}
+@media only screen and (min-device-width: 480px) and (max-device-width: 600px) {  
+    /* Change a menu to fit the screen better, etc... */
+    #profileCard{
+      max-width: 480px;
+    }
+}
+@media only screen and (min-device-width: 600px) and (max-device-width: 800px) {  
+    /* Change a menu to fit the screen better, etc... */
+    #profileCard{
+      max-width: 600px;
+    }
 }
