--- a/src/app/expenses-page/expenses-page.component.scss
+++ b/src/app/expenses-page/expenses-page.component.scss
@@ -28,38 +28,65 @@ ul {
 li {
   margin: 1.5em 0;
   padding: 0;
+  list-style: none;
 }
 
 b { /* used for event dates/times */
   margin-right: 3px;
 }
 
-.demo-app {
+.expenses-container {
+  position: absolute;
+  top: 60px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+#expenseList{
   display: flex;
-  min-height: 100%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  font-size: 14px;
+  flex-direction: row;
+  justify-content: space-between;
+}
+#expenseItem{
+ cursor: pointer;
+ padding-top:10px;
+}
+#mainContent{
+  display: flex;
+  flex-direction: row;
 }
 
-.demo-app-sidebar {
-  width: 200px;
+.sidebar {
+  width: 300px;
   line-height: 1.5;
-  background: #eaf9ff;
-  border-right: 1px solid #d3e2e8;
+  padding:2em;
 }
 
-.demo-app-sidebar-section {
-  padding: 2em;
-}
-
-.demo-app-main {
-  flex-grow: 1;
-  padding: 3em;
+#mainChart {
+  flex-grow: 0.2;
+  padding: 1em 3em 1em 1em;
+  height:auto;
 }
 
 .fc { /* the calendar root */
   max-width: 1100px;
   margin: 0 auto;
 }
+#addexpBtn{
+  margin-bottom: 3px;
+}
+
+#closeSideNav{
+  float:right;
+}
+#menuBtn{
+  margin:1em;
+  margin-left:20px;
+}
+#menuIcon{
+  font-size: 30px;
+}
+
+
 
 
