--- a/src/chartStyles.scss
+++ b/src/chartStyles.scss
@@ -1,12 +1,19 @@
 //chart styling
 .p-component{
         font-family: $font;
+        height:100%;
         // font-size: large;
 }
 
 .p-panel .p-panel-header{
         background-color: darken($primary,10);
+        padding:5px 10px 2px 10px;
         font-family: $font;
         font-size: $headerSize;
         color:$white;
+        width:100%;
+        font-weight: 600;  
 }
+
+
+
