--- a/src/app/bill-create/bill-create.component.scss
+++ b/src/app/bill-create/bill-create.component.scss
@@ -26,12 +26,12 @@ $bgGrey: #ebecef;
 #formField{
   font-family: $font;
   font-size: $textSize;
-  // margin-inline: 20px;
+  margin-inline: 10px;
 }
 #checkbox{
   font-family: $font;
   font-size: $textSize;
-  margin-left: 95px;
+  margin-left: 150px;
 }
 #divBtns{
   display: flex;
