--- a/src/app/bill-details/bill-details.component.scss
+++ b/src/app/bill-details/bill-details.component.scss
@@ -43,7 +43,7 @@ $bgGrey: #ebecef;
 }
 #divBtns{
   display:flex;
-  justify-content: right;
+  justify-content: center;
   margin-right:0px;
   margin-top: 20px;
 }
