--- a/src/app/bill-page/bill-page.component.scss
+++ b/src/app/bill-page/bill-page.component.scss
@@ -1,8 +1,19 @@
+@use '@angular/material' as mat;
 
-h2 {
-  margin: 0;
-  font-size: 16px;
-}
+$my-primary-palette: mat.define-palette(mat.$cyan-palette);
+$my-bg-palette: mat.define-palette(mat.$blue-gray-palette);
+$my-warn-palette: mat.define-palette(mat.$amber-palette);
+
+$font:'Raleway', sans-serif;
+$textSize: 15px;
+$headerSize: 20px;
+$bg:mat.get-color-from-palette($my-bg-palette,800);
+$headerbg: mat.get-color-from-palette($my-primary-palette, 700);
+$primary: mat.get-color-from-palette($my-primary-palette,500);
+$warn: mat.get-color-from-palette($my-warn-palette,500);
+$blue:#007ad9;
+$white: #fff;
+$bgGrey: #ebecef;
 
 ul {
   margin: 0;
@@ -10,41 +21,71 @@ ul {
 }
 
 li {
-  margin: 1.5em 0;
+  margin: 0.2em 0;
   padding: 0;
+  list-style: none;
+}
+li:last-child{
+  margin-bottom: 2em;
+}
+h4{
+  font-family: $font;
+  font-size: $headerSize;
+  padding-bottom: 0;
 }
 
 b { /* used for event dates/times */
   margin-right: 3px;
 }
-
-.demo-app {
+.bills-container {
+  position: absolute;
+  top: 60px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+#billsList{
   display: flex;
-  min-height: 100%;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  font-size: 14px;
+  flex-direction: row;
+  justify-content: space-between;
 }
-
-.demo-app-sidebar {
-  width: 200px;
+#billItem{
+ cursor: pointer;
+ padding-top:10px;
+}
+#mainContent{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.sidebar {
+  width: 300px;
   line-height: 1.5;
-  background: #eaf9ff;
-  border-right: 1px solid #d3e2e8;
+  padding:2em;
 }
-
-.demo-app-sidebar-section {
-  padding: 2em;
+#closeSideNav{
+  float:right;
 }
-
-.demo-app-main {
-  flex-grow: 1;
-  padding: 3em;
+#menuBtn{
+  margin:1em;
+  margin-left:40px;
+}
+#menuIcon{
+  font-size: 30px;
 }
 
 .fc { /* the calendar root */
   max-width: 1100px;
   margin: 0 auto;
 }
+#calendarMain{
+  flex-grow: 1;
+  height: 400px;
+  margin-top: 20px;
+  margin-right:2em;
+}
+
+
 
 
 
