--- a/src/app/expenses-page/expenses-page.component.html
+++ b/src/app/expenses-page/expenses-page.component.html
@@ -8,6 +8,18 @@
       <mat-icon>close_rounded</mat-icon>
     </button>
     <div class='sidebar'>
+      <h4>Instructions</h4>
+      <ul>
+        <li>
+          <mat-icon>check_outline</mat-icon>
+          Select an expense and you will be prompted to edit the entry's details
+        </li>
+        <li>
+          <mat-icon>check_outline</mat-icon>
+          Click the delete button to delete the expense entry
+        </li>
+      </ul>
+      <mat-divider></mat-divider>
 
       <li *ngFor="let expense of cmExpenses">
         <div id="expenseList">
@@ -18,9 +30,6 @@
             <mat-icon>delete_forever</mat-icon>
           </button>
         </div>
-        <!-- <button mat-raised-button color="primary" (click)="openEditExpenseDialog(expense)" style="margin-right: 10px;">
-          Edit
-        </button> -->
 
       </li>
 
