--- a/src/app/bill-details/bill-details.component.scss
+++ b/src/app/bill-details/bill-details.component.scss
@@ -44,7 +44,7 @@ $bgGrey: #ebecef;
 #divBtns{
   display:flex;
   justify-content: center;
-  margin-right:0px;
+  // margin-right:0px;
   margin-top: 20px;
 }
 #editBtn{
