--- a/src/app/bill-edit/bill-edit.component.html
+++ b/src/app/bill-edit/bill-edit.component.html
@@ -7,12 +7,15 @@
 
       <mat-form-field appearance="fill" id="formField">
         <mat-label>Description</mat-label>
+        <mat-icon aria-hidden="true" aria-label="description icon" matPrefix>description</mat-icon>
         <input matInput [(ngModel)]="billInfo.Description" placeholder="Description" type="text" name="Description"
                required>
       </mat-form-field>
       <mat-form-field appearance="fill" id="formField">
         <mat-label>Date</mat-label>
-        <input matInput [(ngModel)]="billInfo.Date" placeholder="Date" type="Date" name="Date" required>
+        <input matInput [(ngModel)]="billInfo.Date" placeholder="Date" name="Date" [matDatepicker]="dp" required>
+        <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
+        <mat-datepicker #dp></mat-datepicker>
       </mat-form-field>
       <mat-form-field appearance="fill" id="formField">
         <mat-label>Amount</mat-label>
