--- a/src/app/expense-create/expense-create.component.html
+++ b/src/app/expense-create/expense-create.component.html
@@ -27,9 +27,9 @@
       </mat-form-field>
       <mat-form-field appearance="fill" id="formField">
         <mat-label>Choose a date</mat-label>
-        <input matInput name="Date" [(ngModel)]="expenseInfo.Date" [matDatepicker]="picker" required>
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+        <input matInput name="Date" [(ngModel)]="expenseInfo.Date" [matDatepicker]="dp" required>
+        <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
+        <mat-datepicker #dp></mat-datepicker>
       </mat-form-field>
       <br>
       <mat-form-field appearance="fill" classname="description" id="formField">
