--- a/src/app/expense-delete/expense-delete.component.html
+++ b/src/app/expense-delete/expense-delete.component.html
@@ -1,13 +1,11 @@
-<p>expense-delete works!</p>
+<mat-card class="deletecard">
+  <mat-card-header id="cardHeader">
+    <mat-card-title id="deleteHeader">Are you sure that you want to delete this expense?</mat-card-title>
+  </mat-card-header>
 
-<div class="delete-container">
-  <mat-card class="deletecard">
-    <h3 class="deletetitle" mat-dialog-title>Are you sure that you want to delete this expense?</h3>
-    <div class="actionbtns">
-      <mat-dialog-actions class="actionbtns">
-        <button mat-raised-button class="cancelbtn" (click)="cancel()">Cancel</button>
-        <button mat-stroked-button class="deletebtn" (click)="deleteExpense(expenseId, token)">Delete Expense</button>
-      </mat-dialog-actions>
-    </div>
-  </mat-card>
-</div>
+  <mat-dialog-actions id="actionbtns">
+    <button mat-raised-button id="cancelbtn" (click)="cancel()">Cancel</button>
+    <button mat-stroked-button id="deletebtn" (click)="deleteExpense(expenseId, token)">Delete Expense</button>
+  </mat-dialog-actions>
+
+</mat-card>
