--- a/src/app/expense-edit/expense-edit.component.html
+++ b/src/app/expense-edit/expense-edit.component.html
@@ -1,26 +1,50 @@
-<p>expense-edit works!</p>
-
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Edit Expense</mat-card-title>
+    <mat-card-title id="expenseEditTitle">Edit Expense</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <form>
-      <mat-form-field>
-        <input matInput [(ngModel)]="expenseInfo.Category" placeholder="Category" type="text" name="Category" required>
+      <mat-form-field appearance="fill" id="formField">
+        <mat-label>Category</mat-label>
+        <mat-icon aria-hidden="true" aria-label="category icon" matPrefix>category</mat-icon>
+        <!-- <input matInput [(ngModel)]="expenseInfo.Category" placeholder="Category" type="text" name="Category" required> -->
+        <mat-select matNativeControl [(ngModel)]="expenseInfo.Category" type="text" placeholder="Category" required
+                    name="Category">
+
+
+          <mat-option value="Housing">Housing</mat-option>
+          <mat-option value="Bills">Bills</mat-option>
+          <mat-option value="Food">Food</mat-option>
+          <mat-option value="Entertainment">Entertainment</mat-option>
+          <mat-option value="Personal">Personal Spending</mat-option>
+          <mat-option value="Savings">Savings</mat-option>
+          <mat-option value="Transportation">Transportation</mat-option>
+          <mat-option value="Medical">Medical</mat-option>
+          <mat-option value="Savings">Savings</mat-option>
+          <mat-option value="Miscellaneous">Miscellaneous</mat-option>
+
+        </mat-select>
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field appearance="fill" id="formField">
+        <mat-label>Date</mat-label>
+        <input matInput [(ngModel)]="expenseInfo.Date" placeholder="Date" [matDatepicker]="dp" name="Date" required>
+        <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
+        <mat-datepicker #dp></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field appearance="fill" id="formField">
+        <mat-label>Description</mat-label>
+        <mat-icon aria-hidden="true" aria-label="description icon" matPrefix>description</mat-icon>
         <input matInput [(ngModel)]="expenseInfo.Description" placeholder="Description" type="text" name="Description"
                required>
       </mat-form-field>
-      <mat-form-field>
-        <input matInput [(ngModel)]="expenseInfo.Date" placeholder="Date" type="Date" name="Date" required>
-      </mat-form-field>
-      <mat-form-field>
+
+      <mat-form-field appearance="fill" id="formField">
+        <mat-label>Amount</mat-label>
+        <mat-icon id="currency" aria-hidden="true" aria-label="CAD icon" matPrefix>attach_money</mat-icon>
         <input matInput [(ngModel)]="expenseInfo.Amount" type="number" placeholder={{data.Amount}} name="Amount"
                required>
-      </mat-form-field>
-      <mat-form-field appearance="fill">
+      </mat-form-field><span>({{expenseInfo.Currency}})</span>
+      <!-- <mat-form-field appearance="fill">
         <mat-label>Currency Preference</mat-label>
         <mat-select matNativeControl [(ngModel)]="expenseInfo.Currency" type="text" placeholder="CAD" name="Currency">
           <mat-option value="CAD">CAD</mat-option>
@@ -28,11 +52,12 @@
           <mat-option value="GBP">GBP</mat-option>
           <mat-option value="EUR">EUR</mat-option>
         </mat-select>
-      </mat-form-field>
+      </mat-form-field> -->
     </form>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button (click)="editExpense(userId, token, expenseId)" color="primary">
+  <mat-card-actions id="divBtns">
+    <button id="editBtn" mat-raised-button (click)="editExpense(userId, token, expenseId)" color="primary">
+      <mat-icon aria-hidden="false" aria-label="save icon">save_alt</mat-icon>
       Save Changes
     </button>
   </mat-card-actions>
