--- a/src/app/bill-page/bill-page.component.scss
+++ b/src/app/bill-page/bill-page.component.scss
@@ -40,7 +40,7 @@ b { /* used for event dates/times */
 .bills-container {
   position: absolute;
   top: 60px;
-  bottom: 0;
+  bottom: 20px;
   left: 0;
   right: 0;
 }
