--- a/src/app/bill-create/bill-create.component.scss
+++ b/src/app/bill-create/bill-create.component.scss
@@ -35,7 +35,7 @@ $bgGrey: #ebecef;
 }
 #divBtns{
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin-right:10px;
   margin-top:-10px;
 }
