--- a/src/app/bill-edit/bill-edit.component.scss
+++ b/src/app/bill-edit/bill-edit.component.scss
@@ -30,7 +30,7 @@ $bgGrey: #ebecef;
 }
 #divBtns{
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin-right:10px;
   margin-top:-10px;
   margin-bottom:10px;
