--- a/src/chartStyles.scss
+++ b/src/chartStyles.scss
@@ -1,7 +1,8 @@
 //chart styling
 .p-component{
         font-family: $font;
-        height:100%;
+        margin-top: 10px;
+        // height:100%;
         // font-size: large;
 }
 
@@ -13,6 +14,12 @@
         color:$white;
         width:100%;
         font-weight: 600;  
+}
+.mat-tab-label{
+        font-family: $font;
+        font-size: $textSize;
+        margin-bottom: -5px;
+        opacity:1;
 }
 
 
