--- a/src/app/bill-edit/bill-edit.component.scss
+++ b/src/app/bill-edit/bill-edit.component.scss
@@ -16,7 +16,7 @@ $bgGrey: #ebecef;
 
 #billEditHeader{
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
 }
 #billEditTitle{
   font-family: $font;
