--- a/src/app/user-registration-form/user-registration-form.component.scss
+++ b/src/app/user-registration-form/user-registration-form.component.scss
@@ -43,3 +43,24 @@ margin:6px
   color:$white;
  margin:10px;
 }
+
+@media only screen and (min-device-width: 380px) and (max-device-width: 600px) {
+#registerForm{
+  justify-content: center;
+}
+  #formField{
+  margin:auto;
+  width:auto;
+}
+
+}
+
+@media only screen and (min-device-width: 250px) and (max-device-width: 380px){
+  #formField{
+    width: 210px;
+    margin: 0px;
+  }
+  #regTitle{
+  font-size: 18px ;
+}
+}
