--- a/src/app/user-update-currency/user-update-currency.component.scss
+++ b/src/app/user-update-currency/user-update-currency.component.scss
@@ -42,3 +42,9 @@ $bgGrey: #ebecef;
 #saveBtn:hover{
   text-decoration: underline;
 }
+
+@media only screen and (min-device-width: 250px) and (max-device-width: 600px){
+#currencyHeader{
+  text-align: center;
+}
+}
