--- a/src/app/user-update-name/user-update-name.component.scss
+++ b/src/app/user-update-name/user-update-name.component.scss
@@ -42,3 +42,12 @@ $bgGrey: #ebecef;
 #saveBtn:hover{
   text-decoration: underline;
 }
+
+@media only screen and (min-device-width: 250px) and (max-device-width: 600px){
+  #divSaveBtn{
+    justify-content: center;
+  }
+  #nameHeader{
+    text-align: center;
+  }
+}
