--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -10,9 +10,8 @@ $headerSize: 20px;
 $headerbg: mat.get-color-from-palette($my-primary-palette, 700);
 $primary: mat.get-color-from-palette($my-primary-palette,500);
 $warn: mat.get-color-from-palette($my-warn-palette,500);
-$blue:#007ad9;
 $white: #fff;
-$bgGrey: #ebecef;
+
 
 .main-page{
   display: flex;
@@ -62,4 +61,26 @@ $bgGrey: #ebecef;
   font-family: $font;
   font-size: $textSize;
   color:$primary;
+}
+
+@media only screen and (min-device-width: 250px) and (max-device-width: 600px) {
+  .main-page{
+    flex-direction: column;
+    justify-content: center;
+    width:100%;
+    margin:30px 0px 10px 0px;
+  }
+  .logo{
+    height:200px;
+    width:auto;
+    margin-top: -50px;
+  }
+  .imglogo{
+    margin-inline-end: none; 
+  }
+  #loginCard{
+    justify-content: center;
+    text-align: center;
+    margin-inline-start: none;
+  }
 }
